--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "frontend-erp",
+  "name": "frontend",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,39 +9,52 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@bpmn-io/properties-panel": "^3.18.2",
-    "@camunda/camunda-composite-components": "^0.6.4",
-    "@formio/react": "^5.3.0-rc.3",
-    "@zeit/next-less": "^1.0.1",
-    "axios": "^1.6.8",
-    "bootstrap": "^5.3.3",
-    "bpmn-font": "0.9.3",
-    "bpmn-js": "^17.6.2",
+    "@bpmn-io/properties-panel": "^3.4.0",
+    "@formio/contrib": "^2.0.0",
+    "@formio/react": "^5.2.4-rc.1",
+    "@types/bcryptjs": "^2.4.3",
+    "@types/hammerjs": "^2.0.41",
+    "@types/jsonwebtoken": "^9.0.2",
+    "@types/node": "20.5.7",
+    "@types/nodemailer": "^6.4.9",
+    "@types/react": "18.2.21",
+    "@types/react-dom": "18.2.7",
+    "autoprefixer": "10.4.15",
+    "axios": "^1.5.0",
+    "bcryptjs": "^2.4.3",
+    "bootstrap": "^5.3.1",
+    "bpmn-js": "^14.0.0",
+    "bpmn-js-bpmnlint": "^0.21.0",
+    "bpmn-js-properties-panel": "^5.1.0",
+    "bpmnlint": "^9.2.0",
+    "camunda-bpmn-js": "^3.2.0",
     "camunda-bpmn-moddle": "^7.0.1",
-    "camunda-dmn-moddle": "1.0.0",
-    "downloadjs": "^1.4.7",
-    "formiojs": "^4.19.2",
+    "domino": "^2.1.6",
+    "eslint": "8.48.0",
+    "eslint-config-next": "13.4.19",
+    "formiojs": "^4.16.0",
+    "hammerjs": "^2.0.8",
     "jquery": "^3.7.1",
-    "min-dash": "^4.2.1",
-    "next": "14.2.3",
-    "preact": "^10.21.0",
-    "react": "^18.3.1",
-    "react-bpmn": "^0.2.0",
-    "react-dom": "^18.3.1",
-    "react-router-dom": "^6.23.0",
-    "react-scripts": "2.0.3",
-    "zeebe-bpmn-moddle": "^1.1.0"
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^7.5.0",
+    "next": "13.4.19",
+    "nodemailer": "^6.9.4",
+    "postcss": "8.4.29",
+    "preact": "^10.17.1",
+    "preact-render-to-string": "^6.2.1",
+    "react": "18.2.0",
+    "react-bootstrap": "^2.8.0",
+    "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.1",
+    "reactstrap": "^9.2.0",
+    "save-file": "^2.3.1",
+    "tailwindcss": "3.3.3",
+    "typescript": "5.2.2"
   },
   "devDependencies": {
-    "bpmn-js-properties-panel": "^5.15.0",
-    "css-loader": "^7.1.1",
-    "less": "^4.2.0",
-    "less-loader": "^12.2.0",
-    "postcss": "^8",
-    "raw-loader": "^4.0.2",
-    "style-loader": "^4.0.0",
-    "tailwindcss": "^3.4.1",
-    "webpack-cli": "^5.1.4",
-    "xml-loader": "^1.2.1"
+    "@types/bcryptjs": "^2.4.3",
+    "@types/jsonwebtoken": "^9.0.2",
+    "@types/nodemailer": "^6.4.8",
+    "encoding": "^0.1.13"
   }
 }
