--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "jquery": "^3.7.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^7.5.0",
-    "next": "13.4.19",
+    "next": "^13.5.6",
     "nodemailer": "^6.9.4",
     "postcss": "8.4.29",
     "preact": "^10.17.1",
