--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-MONGO_URI=mongodb://127.0.0.1:27017/erp
+MONGO_UR=mongodb://127.0.0.1:27017/erpI
 TOKEN_SECRET=nextjsyoutube
 DOMAIN=http://localhost:3001
