update the README.md with link to contributing guide

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
-MONGO_UR=mongodb://127.0.0.1:27017/erpI
+MONGO_URI=mongodb://127.0.0.1:27017/erp
+# MONGO_URI=mongodb://mongo:27017/erp
 TOKEN_SECRET=nextjsyoutube
 DOMAIN=http://localhost:3001
