--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-bootstrap": "^2.8.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.1",
+    "react-router-dom": "^6.23.1",
     "reactstrap": "^9.2.0",
     "save-file": "^2.3.1"
   },
